# white-hat-swarm

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  check_agents.py  pyproject.toml  render.yaml  reset_demo.sh  run_all.sh
agents/: compliance.py  engineer.py  hacker.py  llm.py  qa_tester.py  swarm_tools.py
audit/: seal_audit.py
docs/: architecture.txt  index.html  transcript.json
server/: app.py
shared/: security_policy.md
target_repo/: app.py  test_app.py
