[project]
name = "white-hat-swarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "band-sdk[crewai,langgraph]>=1.0.0",
    "fastapi>=0.137.2",
    "litellm>=1.89.2",
    "pytest>=9.1.1",
    "uvicorn[standard]>=0.49.0",
]
